@@ -4,6 +4,8 @@ that break client code.
 
 Client-Code-Breaking Changes:
 
+2022/08/02: jura::MediatedColleague::mediatorHasSentNotification has been renamed to 
+            handleMediatorNotification and got an additional parameter
 2020/12/17: rsMatrix: setSize renamed to setShape
 2020/07/28: renamed rsRingBuffer to rsDelayBuffer
             renamed rsBuffer to rsRingBuffer
